create array and static markup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="wrapper w-100 vh-100 d-flex justify-content-center align-items-center">
+        <div class="slider">
+            <div class="slide">
+                <img src="./img/01.webp" alt="" >
+            </div>
+           
+        </div>
+    </div>
 
     <script src="./js/script.js"></script>
 </body>
