--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <body>
     <div class="wrapper w-100 vh-100 d-flex justify-content-center align-items-center">
         <div class="slider">
-           
+            <button class="previous">
+                <i class="fa-solid fa-chevron-circle-left"></i>
+            </button>
+            <button class="next">
+                <i class="fa-solid fa-chevron-circle-right"></i>
+            </button>
            
         </div>
     </div>
